--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Click the Button Game</title>
+    <title>Catch the Falling Items Game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="game-container">
-        <h1>Click the Button Game</h1>
-        <p id="timer">Time left: <span id="time">10</span> seconds</p>
+        <h1>Catch the Falling Items Game</h1>
         <p id="score">Score: <span id="score-count">0</span></p>
-        <button id="click-button">Click Me!</button>
+        <div id="game-area">
+            <div id="basket"></div>
+        </div>
         <button id="start-button">Start Game</button>
     </div>
     <script src="script.js"></script>
