--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catch the Falling Items Game</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta http-equiv="refresh" content="5; url=https://www.example.com">
+    <title>Weiterleitung</title>
 </head>
 <body>
-    <div id="game-container">
-        <h1>Catch the Falling Items Game</h1>
-        <p id="score">Score: <span id="score-count">0</span></p>
-        <div id="game-area">
-            <div id="basket"></div>
-        </div>
-        <button id="start-button">Start Game</button>
-    </div>
-    <script src="script.js"></script>
+    <p>Du wirst in 5 Sekunden weitergeleitet. Wenn nicht, klicke <a href="https://www.example.com">hier</a>.</p>
 </body>
 </html>
