--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="5; url=https://www.example.com">
+    <meta http-equiv="refresh" content="2; url=https://www.youtube.com/watch?v=xvFZjo5PgG0">
     <title>Weiterleitung</title>
 </head>
 <body>
-    <p>Du wirst in 5 Sekunden weitergeleitet. Wenn nicht, klicke <a href="https://www.example.com">hier</a>.</p>
+    <p>hallo.</p>
 </body>
 </html>
