--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=xvFZjo5PgG0">
-    <title>Weiterleitung</title>
+    <title>MP3 Autoplay</title>
 </head>
 <body>
-    <p>hallo.</p>
+    <audio controls autoplay>
+        <source src="dein-audio-file.mp3" type="audio/mpeg">
+        Dein Browser unterstützt das Audio-Tag nicht.
+    </audio>
 </body>
 </html>
