--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <audio controls autoplay>
-        <source src="dein-audio-file.mp3" type="audio/mpeg">
+        <source src="rick.mp3" type="audio/mpeg">
         Dein Browser unterstützt das Audio-Tag nicht.
     </audio>
 </body>
