--- a/src/index.html
+++ b/src/index.html
@@ -3,39 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sound Abspielen</title>
+    <title>Video Abspielen</title>
     <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+        body, html {
             margin: 0;
-            background-color: #f0f0f0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
         }
-        .button {
-            background-color: red;
-            color: white;
-            border: none;
-            padding: 20px 40px;
-            font-size: 24px;
-            cursor: pointer;
-            border-radius: 10px;
+        .video-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+        video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     </style>
 </head>
 <body>
-    <audio id="myAudio">
-        <source src="rick.mp3" type="audio/mpeg">
-        Dein Browser unterstützt das Audio-Tag nicht.
-    </audio>
-
-    <button class="button" onclick="playAudio()">Don't click me</button>
+    <div class="video-container">
+        <video id="myVideo" autoplay muted>
+            <source src="dein-video-file.mp4" type="video/mp4">
+            Dein Browser unterstützt das Video-Tag nicht.
+        </video>
+    </div>
 
     <script>
-        function playAudio() {
-            var audio = document.getElementById('myAudio');
-            audio.play();
+        // Optional: Falls du Funktionen für das Video hinzufügen möchtest, z.B. auf Button-Klick
+        function playVideo() {
+            var video = document.getElementById('myVideo');
+            video.play();
         }
     </script>
 </body>
