--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 <body>
     <div class="video-container">
         <video id="myVideo" autoplay muted>
-            <source src="dein-video-file.mp4" type="video/mp4">
+            <source src="rick.mp4" type="video/mp4">
             Dein Browser unterstützt das Video-Tag nicht.
         </video>
     </div>
