--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
     <button class="button" id="startButton" onclick="playVideo()">Don't touch me</button>
     
     <div class="video-container" id="videoContainer">
-        <video id="myVideo" muted>
+        <video id="myVideo">
             <source src="rick.mp4" type="video/mp4">
             Dein Browser unterstützt das Video-Tag nicht.
         </video>
