--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
     </style>
 </head>
 <body>
-    <button class="button" id="startButton" onclick="playVideo()">Don't touch me</button>
+    <button class="button" id="startButton" onclick="playVideo()">touch me</button>
     
     <div class="video-container" id="videoContainer"></div>
 
