--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,10 @@
             newVideo.style.height = '100%';
             newVideo.style.objectFit = 'cover';
             videoContainer.appendChild(newVideo);
+            
+            // Ändere den Button-Text
+            var startButton = document.getElementById('startButton');
+            startButton.textContent = 'Click me again!';
         }
     </script>
 </body>
